2006-03-23  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/pixbufloader.hg: create(): Add documentation, based on 
	new C documentation.

2006-03-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am: Add style.css to EXTRA_DIST.
	* docs/tutorial/gtkmm-tut.xml: TreeView chapter: Add a 
	sub-section about sorting, mentioning the simple set_sort_column() 
	functions and TreeModelSort for independent sorting. Based on 
	code from the example from R. Douglas Barbieri in bug #334791.

2006-03-22  Murray Cumming <murrayc@murrayc.com>

	* gdk/src/dragcontext.hg: Added set_icon_name().
	* gtk/src/toolbutton.hg: Added set_icon_name() and 
	get_icon_name().
	* gdk/src/pixbuf.hg:
	* gdk/src/pixbufloader.ccg:
	* gdk/src/pixbufloader.hg:
	* gtk/src/aboutdialog.hg:
	* gtk/src/dialog.hg:
	* gtk/src/iconview.hg:
	* gtk/src/linkbutton.hg:
	* gtk/src/textbuffer.hg:
	* gtk/src/textchildanchor.hg:
	* gtk/src/treemodelsort.hg: Added documentation, based on 
	the C documentation.

2006-03-22  Murray Cumming <murrayc@murrayc.com>

	* configure.in:
	* examples/book/Makefile.am:
	* examples/book/iconview/Makefile.am:
	* examples/book/iconview/examplewindow.cc:
	* examples/book/iconview/examplewindow.h:
	* examples/book/iconview/main.cc: Added example from 
	R. Douglas Barbieri in bug #335388.
	* examples/book/iconview/gnome-dice-1.svg:
	* examples/book/iconview/gnome-dice-2.svg:
	* examples/book/iconview/gnome-dice-3.svg:
	* examples/book/iconview/gnome-dice-4.svg:
	* examples/book/iconview/gnome-dice-5.svg:
	* examples/book/iconview/gnome-dice-6.svg:
	* examples/book/iconview/mozilla-firefox.png:
	* examples/book/iconview/xmms.xpm: Sample images for the 
	example.

2006-03-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Corrected links to chapters, now that 
	we added a chapter in the middle. Bug #334989 from Rob Page.
	* gtk/gtkmm/listviewtext.h: Added groups and newin doxygen 
	tags.

2006-03-22  Murray Cumming  <murrayc@murrayc.com>
