@@ -510,4 +510,16 @@ a cursor with no pixels in it.
 
 </function>
 
+<function name="gdk_cairo_create">
+<description>
+Creates a Cairo context for drawing to @drawable.
+</description>
+<parameters>
+</parameters>
+<return> A newly created Cairo context.
+
+Since: 2.10
+</return>
+</function>
+
 </root>
