@@ -1,3 +1,9 @@
+2006-03-26  Murray Cumming  <murrayc@murrayc.com>
+
+	* gdk/src/gdk_docs_override.xml: Override the documentation for 
+	create_cairo_context because it mentions destroying the result, 
+	and says that it is since 2.8 instead of 2.10.
+
 2006-03-23  Murray Cumming  <murrayc@murrayc.com>
 
 	* gdk/src/pixbufloader.hg: create(): Add documentation, based on 
